--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     //compile 'com.alibaba:fastjson:1.1.54.android'
     compile 'com.alibaba:fastjson:1.2.17'
+    compile 'com.blankj:utilcode:1.3.4'
 
    // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
    // compile 'com.github.glassLake:DialogUtils:1.0.2'
