--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -48,4 +48,9 @@ dependencies {
    // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
    // compile 'com.github.glassLake:DialogUtils:1.0.2'
 
+    //rxjava相关依赖
+    compile 'io.reactivex:rxjava:1.2.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
 }
