--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -33,26 +33,21 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
-   // compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    // compile 'com.squareup.retrofit2:retrofit:2.1.0'
     //compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
     //compile 'org.greenrobot:eventbus:3.0.0'
     //compile 'com.alibaba:fastjson:1.1.54.android'
     compile 'com.alibaba:fastjson:1.2.17'
     compile 'com.blankj:utilcode:1.3.4'
-
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-
-   // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
-   // compile 'com.github.glassLake:DialogUtils:1.0.2'
-
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
+    // compile 'com.github.glassLake:DialogUtils:1.0.2'
     //rxjava相关依赖
     //compile 'io.reactivex:rxjava:1.2.1'
-   // compile 'io.reactivex:rxandroid:1.2.1'
-   // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
+    // compile 'io.reactivex:rxandroid:1.2.1'
+    // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 }
