--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,24 +45,23 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     //compile project(path: ':volleyplus')
     compile 'com.jakewharton:butterknife:7.0.1'
+    /* compile 'com.squareup.retrofit2:retrofit:2.1.0'
+        compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-   /* compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+        compile 'org.greenrobot:eventbus:3.0.0'
 
-    compile 'org.greenrobot:eventbus:3.0.0'
-
-    compile 'com.github.glassLake:MyVolleyPlus:1.0.0'*/
+        compile 'com.github.glassLake:MyVolleyPlus:1.0.0'*/
     compile project(path: ':netwrapper2')
     compile 'com.github.orhanobut:logger:1.12'
-
     compile 'com.mylhyl:acp:1.0.0'
-
     debugCompile 'com.antfortune.freeline:runtime:0.8.4'
     releaseCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
     testCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
+    compile files('libs/cglib-nodep-3.2.5.jar')
+    compile files('libs/ProxyUtils-1.0.0.jar')
 }
