--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     //compile 'io.reactivex:rxjava:1.2.1'
     // compile 'io.reactivex:rxandroid:1.2.1'
     // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile files('libs/lite-async-1.0.0.jar')
 }
