--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     //compile 'org.greenrobot:eventbus:3.0.0'
     //compile 'com.alibaba:fastjson:1.1.54.android'
     compile 'com.alibaba:fastjson:1.2.17'
-    compile 'com.blankj:utilcode:1.3.4'
+    //compile 'com.blankj:utilcode:1.3.4'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
@@ -50,5 +50,4 @@ dependencies {
     //compile 'io.reactivex:rxjava:1.2.1'
     // compile 'io.reactivex:rxandroid:1.2.1'
     // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile files('libs/lite-async-1.0.0.jar')
 }
