--- a/netwrapper2/build.gradle
+++ b/netwrapper2/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.17'
     //compile 'com.blankj:utilcode:1.3.4'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // compile 'com.github.glassLake:MyVolleyPlus:1.0.1'
     // compile 'com.github.glassLake:DialogUtils:1.0.2'
     //rxjava相关依赖
