--- a/HttpUtil/src/main/AndroidManifest.xml
+++ b/HttpUtil/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.hss01248.net">
+    <uses-sdk tools:overrideLibrary="com.hss01248.notifyutil"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
