--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,25 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.antfortune.freeline'
+//apply plugin: 'com.antfortune.freeline'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.hss01248.netWrapper"
+        applicationId "com.hss01248.httputil"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
 
-    freeline {
+    /*freeline {
         hack true
         autoDependency false
        // productFlavor 'androidmarket' // 渠道名
         apkPath ''
         applicationProxy false
-    }
+    }*/
     buildTypes {
         release {
             minifyEnabled false
@@ -45,7 +45,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    //compile 'com.android.support:appcompat-v7:25.0.0'
     //compile project(path: ':volleyplus')
     compile 'com.jakewharton:butterknife:7.0.1'
     /* compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -57,11 +57,11 @@ dependencies {
     compile project(path: ':HttpUtil')
     compile 'com.github.orhanobut:logger:1.12'
     compile 'com.mylhyl:acp:1.0.0'
-    debugCompile 'com.antfortune.freeline:runtime:0.8.4'
-    releaseCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
-    testCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
-    compile files('libs/cglib-nodep-3.2.5.jar')
-    compile files('libs/ProxyUtils-1.0.0.jar')
+    //debugCompile 'com.antfortune.freeline:runtime:0.8.4'
+    //releaseCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
+    //testCompile 'com.antfortune.freeline:runtime-no-op:0.8.4'
+   // compile files('libs/cglib-nodep-3.2.5.jar')
+   // compile files('libs/ProxyUtils-1.0.0.jar')
     debugCompile 'com.readystatesoftware.chuck:library:1.0.4'
     releaseCompile 'com.readystatesoftware.chuck:library-no-op:1.0.4'
     //compile 'com.github.hss01248:NotifyUtil:1.0.0'
