--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,14 @@
         android:supportsRtl="true"
         android:name=".BaseApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivityNew">
+        <activity android:name=".SplashActy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".akulaku.AkulakuActy"/>
+        <activity android:name=".MainActivityNew"/>
 
 
     </application>
