--- a/HttpUtil/build.gradle
+++ b/HttpUtil/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     //compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     //compile 'org.greenrobot:eventbus:3.0.0'
     //compile 'com.alibaba:fastjson:1.1.54.android'
-    compile 'com.alibaba:fastjson:1.1.64.android'
+    //compile 'com.alibaba:fastjson:1.1.64.android'
     //compile 'com.blankj:utilcode:1.3.4'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    //compile 'com.squareup.retrofit2:retrofit:2.3.0'
     //compile 'com.github.hss01248:OpenUri:1.0.0'
     // compile 'com.github.hss01248:NotifyUtil:1.0.0'
     //compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -54,9 +54,11 @@ dependencies {
     // compile 'io.reactivex:rxandroid:1.2.1'
     // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile project(':openuri')
-    compile 'com.github.hss01248:NotifyUtil:1.0.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile ('com.github.hss01248:NotifyUtil:1.0.1'){
+        exclude group: 'com.android.support'
+    }
+    //compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 // Because RxAndroid releases are few and far between, it is recommended you also
 // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    //compile 'io.reactivex.rxjava2:rxjava:2.1.5'
 }
