--- a/HttpUtil/src/main/AndroidManifest.xml
+++ b/HttpUtil/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hss01248.net">
     <uses-sdk tools:overrideLibrary="com.hss01248.notifyutil"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
