--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.alibaba:fastjson:1.1.64.android'
+    //compile 'io.reactivex:rxjava:1.2.1'
+    // compile 'io.reactivex:rxandroid:1.2.1'
+    // compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
 }
