--- a/HttpUtil/build.gradle
+++ b/HttpUtil/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     //compile 'com.alibaba:fastjson:1.1.54.android'
     //compile 'com.alibaba:fastjson:1.1.64.android'
     //compile 'com.blankj:utilcode:1.3.4'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.squareup.retrofit2:retrofit:2.3.0'
     //compile 'com.github.hss01248:OpenUri:1.0.0'
     // compile 'com.github.hss01248:NotifyUtil:1.0.0'
