--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,11 @@
 buildscript {
     repositories {
         jcenter()
-    }
+		maven {
+			url 'https://maven.google.com/'
+			name 'Google'
+		}
+	}
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
 
@@ -17,7 +21,11 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-    }
+		maven {
+			url 'https://maven.google.com/'
+			name 'Google'
+		}
+	}
 }
 
 task clean(type: Delete) {
